# Machine_Learning_Portfolio

./: README.md  multiple_linear_regression.ipynb
AI Specialization - U of Minuto de Dios/Computer_Vision/: Computer_vision_week_2-Copy1.ipynb  Computer_vision_week_2_practice.ipynb
Give Life_ Predict Blood Donations/: Give Life - Predict Blood Donations Guided project ML.ipynb  data_transfusion.xlsx  notebook.ipynb
Linear_regression/: Gradient descent functions.ipynb  Gradient_descent_functions.py  Linear_regression_basic_case.ipynb  README.md
Loan Defaults exercise/: Default_Fin.xlsx  Imbalanced-Learn Library Example.ipynb  Project 1 - Loan default prediction.ipynb  README.md  resultado_oversampling_os_X.xlsx  resultado_oversampling_os_y.xlsx
Logistic Regression -Fraud detection credit card/: LogisticRegression_Fraud_detection_card.ipynb  README.md  path_csv_dataset
Multiple Linear Regression/: Multi-regression case.ipynb
Research_project/: cifar_net.pth  cluster_dask_gcp.txt  pyproject.toml
Research_project/.ipynb_checkpoints/: CIFAR_DeepLearning_Local-checkpoint.ipynb  Local_TF_CIFAR10-checkpoint.ipynb  MNIST_Local-Copy1-checkpoint.ipynb  MNIST_Local-checkpoint.ipynb  otroMNIST-checkpoint.ipynb
Research_project/resultados/Scripts Local and Oncloud/: CIFAR_DeepLearning_Local_90epochs.ipynb  Pytorch_cloud90_epochs.ipynb  Pytorch_cloud_160epochs.ipynb
auc_roc_curve/: 3.9  auc_roc_scratch.ipynb  pyproject.toml
auc_roc_curve/.ipynb_checkpoints/: auc_roc_scratch-checkpoint.ipynb
models/: model_lstm.pkl
poetry-demo/: pyproject.toml
(+56 files in other folders)
