[tool.poetry]
name = "hpc-project"
version = "0.1.0"
description = "Research project about distribute and parallel training to Deep learning models"
authors = ["Michael Andres Mora P <michael.morapp@gmail.com>"]
readme = "README.md"
packages = [{include = "hpc_project"}]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
pandas = "^2.0.3"
torch = "^2.0.1"
jupyter = "^1.0.0"
torchvision = "^0.15.2"
matplotlib = "^3.7.2"
tensorflow = "^2.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
