[tool.poetry]
name = "poetry-demo-2"
version = "0.1.0"
description = "\"Prueba para crear nuevo toml file con pre-existing-project\""
authors = ["Michael Andres Mora P <michael.morapp@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo_2"}]

[tool.poetry.dependencies]
python = "^3.8"
pendulum = "^2.1.2"
pandas = "^2.0.3"
scikit-learn = "^1.3.0"
matplotlib = "^3.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
