[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Michael Andres Mora P <michael.morapp@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry_demo"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
